[package]
name = "colorgen-nvim"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Generate colorschemes for Neovim"
readme = "README.md"
homepage = "chrisatmachine.com"
repository = "https://github.com/ChristianChiarulli/colorgen-nvim"
categories = ["command-line-utilities", "compilers", "config"]
keywords = ["neovim", "nvim", "colorscheme", "toml", "theme"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
toml = "0.5.9"
regex = "1.6.0"
