[package]
name = "colorgen-nvim"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Generate colorschemes for Neovim"
readme = "README.md"
homepage = "https://chrisatmachine.com"
repository = "https://github.com/ChristianChiarulli/colorgen-nvim"
categories = ["command-line-utilities", "compilers", "config"]
keywords = ["neovim", "nvim", "colorscheme", "toml", "theme"]


[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
toml = {version = "0.5.9", features = ["preserve_order"]}
regex = "1.6.0"
