[package]
name = "colorgen-nvim"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Generate colorschemes for Neovim"
readme = "README.md"
homepage = "https://chrisatmachine.com"
repository = "https://github.com/ChristianChiarulli/colorgen-nvim"
categories = ["command-line-utilities", "compilers", "config"]
keywords = ["neovim", "nvim", "colorscheme", "toml", "theme"]


[dependencies]
bitflags = "2.1.0"
clap = { version = "4.2.5", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
nom = "7.1.3"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.3"
